fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -174,14 +174,9 @@ html {
     box-shadow: 0px -2px 3px 2px rgba(0, 0, 0, 0.288);
 }
 
-.footer__section--left {
-    text-align: left;
-    padding-left: 15px;
-}
-
+.footer__section--left,
 .footer__section--right {
-    text-align: right;
-    padding-right: 15px;
+    text-align: center;
 }
 
 .heading--footer {
